--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,22 +8,22 @@ jobs:
       - name: Terraform Init
       - run: terraform init -backend-config=env-dev/state.tfvars
 
-  QA:
-    runs-on: ubuntu-latest
-    needs: DEV
-    steps:
-      - run: echo just a dummy job
-
-  UAT:
-    runs-on: ubuntu-latest
-    needs: QA
-    steps:
-      - run: echo just a dummy job
-
-  PORD:
-    runs-on: self-hosted
-    needs: UAT
-    steps:
-      - uses: actions/checkout@v4
-      - name: Terraform Init
-      - run: terraform init -backend-config=env-dev/state.tfvars
+#  QA:
+#    runs-on: ubuntu-latest
+#    needs: DEV
+#    steps:
+#      - run: echo just a dummy job
+#
+#  UAT:
+#    runs-on: ubuntu-latest
+#    needs: QA
+#    steps:
+#      - run: echo just a dummy job
+#
+#  PORD:
+#    runs-on: self-hosted
+#    needs: UAT
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Terraform Init
+#      - run: terraform init -backend-config=env-dev/state.tfvars
