--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Terraform Init
-      - run: terraform init -backend-config=env-dev/state.tfvars
+        run: terraform init -backend-config=env-dev/state.tfvars
 
   QA:
     runs-on: ubuntu-latest
@@ -26,4 +26,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Terraform Init
-      - run: terraform init -backend-config=env-dev/state.tfvars
+        run: terraform init -backend-config=env-dev/state.tfvars
