--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,39 +7,39 @@ jobs:
       - uses: actions/checkout@v4
       - name: Terraform Init
         run: terraform init -backend-config=env-dev/state.tfvars
-      - name: Terraform Plan
-        run: terraform plan -var-file=env-dev/main.tfvars
+#      - name: Terraform Plan
+#        run: terraform plan -var-file=env-dev/main.tfvars
 
-  DEV-APPLY:
-    runs-on: self-hosted
-    environment: dev
-    needs: DEV-PLAN
-    steps:
-      - uses: actions/checkout@v4
-      - name: Terraform Init
-        run: terraform init -backend-config=env-dev/state.tfvars
-      - name: Terraform Apply
-        run: terraform apply -var-file=env-dev/main.tfvars -auto-approve
+#  DEV-APPLY:
+#    runs-on: self-hosted
+#    environment: dev
+#    needs: DEV-PLAN
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Terraform Init
+#        run: terraform init -backend-config=env-dev/state.tfvars
+#      - name: Terraform Apply
+#        run: terraform apply -var-file=env-dev/main.tfvars -auto-approve
 
   QA:
     runs-on: ubuntu-latest
-    environment: qa
-    needs: DEV-APPLY
+#    environment: qa
+    needs: DEV-PLAN
     steps:
       - run: echo just a dummy job
 
   UAT:
     runs-on: ubuntu-latest
-    environment: uat
+#    environment: uat
     needs: QA
     steps:
       - run: echo just a dummy job
 
   PROD:
     runs-on: self-hosted
-    environment: prod
+#    environment: prod
     needs: UAT
     steps:
       - uses: actions/checkout@v4
       - name: Terraform Init
-        run: terraform init -backend-config=env-dev/state.tfvars
+        run: terraform init -backend-config=env-prod/state.tfvars
