--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,24 +7,24 @@ jobs:
       - uses: actions/checkout@v4
       - name: Terraform Init
         run: terraform init -backend-config=env-dev/state.tfvars
-#      - name: Terraform Plan
-#        run: terraform plan -var-file=env-dev/main.tfvars
+      - name: Terraform Plan
+        run: terraform plan -var-file=env-dev/main.tfvars
 
-#  DEV-APPLY:
-#    runs-on: self-hosted
-#    environment: dev
-#    needs: DEV-PLAN
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Terraform Init
-#        run: terraform init -backend-config=env-dev/state.tfvars
-#      - name: Terraform Apply
-#        run: terraform apply -var-file=env-dev/main.tfvars -auto-approve
+  DEV-APPLY:
+    runs-on: self-hosted
+    environment: dev
+    needs: DEV-PLAN
+    steps:
+      - uses: actions/checkout@v4
+      - name: Terraform Init
+        run: terraform init -backend-config=env-dev/state.tfvars
+      - name: Terraform Apply
+        run: terraform apply -var-file=env-dev/main.tfvars -auto-approve
 
   QA:
     runs-on: ubuntu-latest
 #    environment: qa
-    needs: DEV-PLAN
+    needs: DEV-APPLY
     steps:
       - run: echo just a dummy job
 
