--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -2,7 +2,7 @@ name: Remove Roboshop Infra
 on: [workflow_dispatch]
 jobs:
 
-  DEV-APPLY:
+  DEV:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
