--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Terraform Init
         run: terraform init -backend-config=env-dev/state.tfvars
       - name: Terraform Destroy
-        run: terraform destroy -var-file=env-dev/main.tfvars -auto-approve
+        run: terraform destroy -var-file=env-dev/main.tfvars -auto-approve -var vault_token=${{ secrets.VAULT_TOKEN }}
 
   PROD:
     runs-on: self-hosted
@@ -18,4 +18,4 @@ jobs:
       - name: Terraform Init
         run: terraform init -backend-config=env-prod/state.tfvars
       - name: Terraform Destroy
-        run: terraform destroy -var-file=env-dev/main.tfvars -auto-approve
+        run: terraform destroy -var-file=env-dev/main.tfvars -auto-approve -var vault_token=${{ secrets.VAULT_TOKEN }}
